      2) Added new protected functions setOpen() and setFailed()
      3) Moved the output stream to protected.

   Thread classes
      1) Fixed double thread termination.

--------------------------------------------------------------------------------
basicGL

   Display class
      1) Fixed a bug associated with readFrameBuffer() returning a
         boolean false, when it should return 0.

   Image class
      1) Updated to read BMP files on Big-endian systems


--------------------------------------------------------------------------------
dis

   EmitterBeamData struct
      1) add the check for 'beamStatus', which was missing from the compare '==' operator.


--------------------------------------------------------------------------------
gui-glut

   GlutDisplay class
      1) reshapeSubWindow() -- added a glutPostWindowRedisplay() call since the
      glutReshapeWindow() didn't always take on Linux.


--------------------------------------------------------------------------------
otw

   CigiClNetworkSignalProcessing class
      1) OnHotResp() -- added support for the CigiHatHotXRespV3_2 class.


--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation

   Action class
      1) Is now derived from basic's UBF Action class.  The execute() function
      'actor' argument must be the OnboardComputer or the ownship, which can be
      used to find the OnboardComputer.  The execute() fucntion will find the
      OnboardComputer and 'trigger' the action.

   Antenna class
      1) onRfEmissionEvent() -- created and ref()'d a local copy of the RfSystem
      pointer.  Without this change, the Antenna can remove the 'sys' pointer
      in the middle of this method when a shutdown event occurs.

      2) onRfEmissionReturnEventAntenna() -- created and ref()'d a local copy of