@@ -31,6 +31,13 @@ basicGL
       1) Fixed a bug associated with readFrameBuffer() returning a
          boolean false, when it should return 0.
 
+   Graphic class
+      1) removed the setSlotStipplePattern(String) slot function, which required a hex
+      string value.  Use the setSlotStipplePattern(Number) slot function.
+      2) setSlotStipplePattern(Number) -- added a 16 bit value check
+      3) changed default for slot 'stippleFactor' from zero to one
+      4) changed default for slot 'stipplePattern' from 0x0000 to 0xFFFF
+
    Image class
       1) Updated to read BMP files on Big-endian systems
 
